fixed critical oversight that occured during the last ui update, hiding the loading text.; loading text is now visible.

--- a/mainSite/static/styles.css
+++ b/mainSite/static/styles.css
@@ -485,6 +485,18 @@ img.logo.small {
     transform: translateX(100%);
 }
 
+#loading{
+    position: fixed;
+    bottom: 50px;
+    /*center this horizontally*/
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 11;
+    background-color: rgba(255, 255, 255, 0.75);
+    border-radius: 4px;
+    padding: var(--standard-padding);
+}
+
 .TextBoxBig {
     align-self: center;
     align-items: center;
